force-app/main/default/objects/Agreement_Detail__c/Agreement_Detail__c.object-meta.xml
<CustomObject>
    <description>Agreement Details</description>
    <label>Agreement Detail</label>
    <nameField>
        <displayFormat>AD-{00000}</displayFormat>
        <label>Agreement Details #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>