force-app/main/default/objects/Agreement_Detail__c/fields/Agreement__c.field-meta.xml
<CustomField>
    <fullName>Agreement__c</fullName>
    <label>Agreement</label>
    <referenceTo>TSGADX__Agreements__c</referenceTo>
    <relationshipLabel>Equipment (Agreement Details)</relationshipLabel>
    <relationshipName>Agreement_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>