force-app/main/default/objects/Agreement_Detail__c/fields/Avg_Install_Volume__c.field-meta.xml
<CustomField>
    <fullName>Avg_Install_Volume__c</fullName>
    <formula>Equipment__r.EA_Avg_Install_Volume__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avg Install Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>