force-app/main/default/objects/Agreement_Detail__c/fields/Base_Rate_Period__c.field-meta.xml
<CustomField>
    <fullName>Base_Rate_Period__c</fullName>
    <label>Base Rate Period</label>
    <type>TextArea</type>
</CustomField>