force-app/main/default/objects/Agreement_Detail__c/fields/Contract_Meter_Group__c.field-meta.xml
<CustomField>
    <fullName>Contract_Meter_Group__c</fullName>
    <label>Contract Meter Group</label>
    <type>TextArea</type>
</CustomField>