force-app/main/default/objects/Agreement_Detail__c/fields/EA_Contract_Detail_Id__c.field-meta.xml
<CustomField>
    <fullName>EA_Contract_Detail_Id__c</fullName>
    <label>EA Contract Detail Id</label>
    <length>16</length>
    <type>Text</type>
</CustomField>