force-app/main/default/objects/Agreement_Detail__c/fields/EA_Contract_Id__c.field-meta.xml
<CustomField>
    <fullName>EA_Contract_Id__c</fullName>
    <formula>Agreement__r.EA_Contract_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EA Contract Id</label>
    <type>Text</type>
</CustomField>