force-app/main/default/objects/Agreement_Detail__c/fields/EA_Equipment_Number__c.field-meta.xml
<CustomField>
    <fullName>EA_Equipment_Number__c</fullName>
    <formula>Equipment__r.EA_Equipment_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EA-Equipment Number</label>
    <type>Text</type>
</CustomField>