force-app/main/default/objects/Agreement_Detail__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <description>Equipment is auto added by Trigger</description>
    <inlineHelpText>Equipment is auto added by Trigger</inlineHelpText>
    <label>Equipment</label>
    <referenceTo>TSGADX__Equipment__c</referenceTo>
    <relationshipLabel>Agreements (Agreement Details)</relationshipLabel>
    <relationshipName>Agreement_Details</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>