force-app/main/default/objects/Agreement_Detail__c/fields/Install_Date__c.field-meta.xml
<CustomField>
    <fullName>Install_Date__c</fullName>
    <formula>Equipment__r.TSGADX__Install_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Install Date</label>
    <type>Date</type>
</CustomField>