force-app/main/default/objects/Agreement_Detail__c/fields/Lease_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Lease_Expiration_Date__c</fullName>
    <formula>Agreement__r.TSGADX__Lease_Exp_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lease Expiration Date</label>
    <type>Date</type>
</CustomField>