force-app/main/default/objects/Agreement_Detail__c/fields/Lease_ID__c.field-meta.xml
<CustomField>
    <fullName>Lease_ID__c</fullName>
    <label>Lease ID#</label>
    <length>40</length>
    <type>Text</type>
</CustomField>