force-app/main/default/objects/Agreement_Detail__c/fields/Lease_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Lease_Payment_Amount__c</fullName>
    <label>Lease Payment Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>