force-app/main/default/objects/Agreement_Detail__c/fields/Lease_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Lease_Start_Date__c</fullName>
    <formula>Equipment__r.EA_Lease_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lease Start Date</label>
    <type>Date</type>
</CustomField>