force-app/main/default/objects/Agreement_Detail__c/fields/Leasing_Company__c.field-meta.xml
<CustomField>
    <fullName>Leasing_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup and add the Leasing Company</inlineHelpText>
    <label>Leasing Company</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or does not match filter criteria. Must be an existing PARTNER account.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filterItems>
        <infoMessage>Lookup and add the Leasing Company</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leasing Company</relationshipLabel>
    <relationshipName>Agreement_Details</relationshipName>
    <type>Lookup</type>
</CustomField>