force-app/main/default/objects/Agreement_Detail__c/fields/Make__c.field-meta.xml
<CustomField>
    <fullName>Make__c</fullName>
    <formula>Text(Equipment__r.TSGADX__Make__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Make</label>
    <type>Text</type>
</CustomField>