force-app/main/default/objects/Agreement_Detail__c/fields/Overage_Rate__c.field-meta.xml
<CustomField>
    <fullName>Overage_Rate__c</fullName>
    <label>Overage Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>