force-app/main/default/objects/Agreement_Detail__c/fields/Previous_Id__c.field-meta.xml
<CustomField>
    <fullName>Previous_Id__c</fullName>
    <description>A combination of equipment Id, Service Contract Id, and Lease Id</description>
    <label>Previous Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>