force-app/main/default/objects/Agreement_Detail__c/fields/Purchase_Option__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Option__c</fullName>
    <label>Purchase Option</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>$1 Buyout</fullName>
            </value>
            <value>
                <fullName>10% Fair Market Value (FMV)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>FMV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>