force-app/main/default/objects/Agreement_Detail__c/fields/Service_Base_Rate__c.field-meta.xml
<CustomField>
    <fullName>Service_Base_Rate__c</fullName>
    <label>Service Base Rate</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>