force-app/main/default/objects/Agreement_Detail__c/fields/Service_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Expiration_Date__c</fullName>
    <formula>Agreement__r.TSGADX__Expiration_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Expiration Date</label>
    <type>Date</type>
</CustomField>