force-app/main/default/objects/Agreement_Detail__c/fields/Warranty_Exp_Date__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Exp_Date__c</fullName>
    <formula>Equipment__r.TSGADX__Warranty_Exp_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warranty Exp. Date</label>
    <type>Date</type>
</CustomField>